--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,14 +9,8 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
   - title: "CV"
-    url: /cv/
+    url: https://github.com/kimwn84/kimon.antonakopoulos.github.io/tree/master/files/CV.pdf
     
   - title: "Guide"
     url: /markdown/
